--- a/package.json
+++ b/package.json
@@ -15,6 +15,34 @@
   "bugs": {
     "url": "https://github.com/Bjornskjald/instagram-uploader/issues"
   },
+  "build": {
+    "appId": "ml.bjorn.instagram-uploader",
+    "files": [
+      "css/",
+      "js/",
+      "html/",
+      "fonts/",
+      "icons/",
+      "node_modules/",
+      "main.html",
+      "package.json",
+      "index.js"
+    ],
+    "linux": {
+      "category": "Utility;Network",
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "icon": "icons"
+    },
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "icons/icon.ico"
+    }
+  },
   "homepage": "https://github.com/Bjornskjald/instagram-uploader#readme",
   "dependencies": {
     "instagram-private-api": "^0.6.7"
