--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "homepage": "https://github.com/Bjornskjald/instagram-uploader#readme",
   "dependencies": {
-    "instagram-private-api": "^0.6.7"
+    "instagram-private-api": "^0.6.7",
+    "materialize-css": "^0.100.2"
   }
 }
